# cogni-drive

./: README.md  bootstrap.sh  fira-drive.toml  pyproject.toml
config/: settings.yaml
scripts/: apt-packages-rpi.txt  install_deps_rpi.sh
src/cogni-drive/: __init__.py  __main__.py  config.py  logging.py  main.py
src/cogni_drive/: __main__.py  config.py  main.py
src/cogni_drive/core/: build_config.py
src/cogni_drive/hardware/: status_led.py
src/cogni_drive/monitor/: metrics.py
src/fira-drive/capture/: capture_to_shared_memory.py  webcam_stream.py
src/fira-drive/perception-tests/: 01_grayscale.py  02_hsv_conversion.py  03_noise_filter.py  04_roi_crop.py  05_birds_eye.py  06_morphological_ops.py  07_canny_edges.py  08_clahe_normalize.py  09_hough_lines.py
systemd/: cogni-drive.service
